#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.65])
AC_INIT([CSLC-Server], [0.1], [yt0907.Wang@gmail.com])
#AC_CONFIG_SRCDIR([include/common/Agent.h])
AC_CONFIG_HEADERS([include/config.h])
#call automake to generate Makefile by Makefile.am
AM_INIT_AUTOMAKE([no-dependencies])
#close optimization
:${CXXFLAGS="-g -O0 -Werror"}
# Checks for programs.
AC_PROG_CXX
AC_PROG_CC
AC_PROG_RANLIB
CXXFLAGS="$CXXFLAGS -lpthread"
# Checks for libraries.

# Checks for header files.
AC_CHECK_HEADERS([arpa/inet.h fcntl.h netinet/in.h stdint.h stdlib.h string.h sys/socket.h sys/time.h unistd.h])

subdirs2="lib/common lib/echo test"

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_TYPE_OFF_T
AC_TYPE_SIZE_T
AC_TYPE_UINT32_T

# Checks for library functions.
AC_FUNC_ERROR_AT_LINE
AC_CHECK_FUNCS([bzero gettimeofday inet_ntoa memset socket strerror])

AC_SUBST(subdirs2)
AC_CONFIG_FILES([Makefile
 		lib/common/Makefile
		lib/echo/Makefile
		test/Makefile])
AC_OUTPUT
